update use all content types
Signed-off-by: see-quick <maros.orsak159@gmail.com>